<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context="lincolnstuart.co.pokedex.AuthorActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp">

        <include
            android:id="@+id/lt_action_bar"
            layout="@layout/app_bar_simple" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/linkedin"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/tv_linkedin_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:text="@string/linkedin_profile"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_linkedin"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <View
        android:id="@+id/vw_line_linkedin"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_linkedin" />


    <TextView
        android:id="@+id/tv_github"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/github"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_linkedin" />

    <TextView
        android:id="@+id/tv_github_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:text="@string/github_profile"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_github"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_linkedin" />

    <View
        android:id="@+id/vw_line_github"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_github" />


    <TextView
        android:id="@+id/tv_twitter"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/twitter"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_github" />

    <TextView
        android:id="@+id/tv_twitter_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:text="@string/twitter_profile"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_twitter"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_github" />

    <View
        android:id="@+id/vw_line_twitter"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_twitter" />

    <TextView
        android:id="@+id/tv_youtube"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/youtube"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_twitter" />

    <TextView
        android:id="@+id/tv_youtube_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:text="@string/youtube_channel"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_youtube"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_twitter" />

    <View
        android:id="@+id/vw_line_youtube"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_youtube" />



</android.support.constraint.ConstraintLayout>
