<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context="co.lincolnstuart.pokedex.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp">

        <include
            android:id="@+id/lt_action_bar"
            layout="@layout/app_bar_simple" />

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/tv_keep_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/keep_history"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_keep_history"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <View
        android:id="@+id/vw_line_history"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_keep_history" />

    <Switch
        android:id="@+id/sw_keep_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/data"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_keep_history"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_history" />

    <View
        android:id="@+id/vw_line_data"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data" />

    <TextView
        android:id="@+id/tv_label_wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/wrong_answers"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toStartOf="@+id/tv_wrong_answer"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_data" />

    <TextView
        android:id="@+id/tv_wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_line_data" />

    <TextView
        android:id="@+id/tv_label_right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/right_answers"
        android:textAllCaps="true"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toStartOf="@+id/tv_right_answer"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_wrong_answer" />


    <TextView
        android:id="@+id/tv_right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/textLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wrong_answer" />

    <Button
        android:id="@+id/bt_clear_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_right_answer" />


    <View
        android:id="@+id/vw_line_data_fim"
        style="@style/LineBottom"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_clear_data"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
